test/Fail/UnquoteDeclNotDefined.err
UnquoteDeclNotDefined.agda:9.1-10.27: error: [Unquote.MissingDefinition]
Missing definition for f
